--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,10 @@
 .hand-area.right {
   align-items: flex-start;
 }
+.check-banner {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: red;
+  margin: 10px;
+}
